--- a/style.css
+++ b/style.css
@@ -45,12 +45,38 @@ body {
 .itemRight {
   width: 200px;
   height: 100px;
-  background-color: #e11d48;
   border-radius: 6px;
   position: absolute;
   animation-timing-function: linear;
   animation-duration: 30s;
   animation-iteration-count: infinite;
+  background-size: cover;
+  background-position: center;
+}
+
+.item1 {
+  background-image: url("image1.png");
+}
+.item2 {
+  background-image: url("image2.png");
+}
+.item3 {
+  background-image: url("image3.png");
+}
+.item4 {
+  background-image: url("image4.png");
+}
+.item5 {
+  background-image: url("image5.png");
+}
+.item6 {
+  background-image: url("image6.png");
+}
+.item7 {
+  background-image: url("image7.png");
+}
+.item8 {
+  background-image: url("image8.png");
 }
 
 .itemLeft {
