--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .item1 {
-  background-image: url("image1.png");
+  background-image: url("https://statics.myclickfunnels.com/workspace/vZraBn/image/9262289/file/caa61b2c4bb76f9c082d9c03237b2ff7.png");
 }
 .item2 {
   background-image: url("image2.png");
